--- a/src/styles/NavbarDetail.module.css
+++ b/src/styles/NavbarDetail.module.css
@@ -1,14 +1,19 @@
 .navbar {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    background-color: #fff;
+    background-color: bisque;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    color: #fff;
+    -webkit-column-gap: 10rem;
+    column-gap: 10rem;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 2rem;
   }
   
   .title {
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     font-weight: bold;
   }
   
