--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #D0BA63;
+    /* background-color: grey; */
     border-bottom: 1px solid #ccc;
     padding: 1rem;
   }
