--- a/src/styles/Datailspage.module.css
+++ b/src/styles/Datailspage.module.css
@@ -8,14 +8,6 @@
 }
 
 .maindiv {
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
-    margin-bottom: 20px; */
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
@@ -23,12 +15,13 @@
 
 .country {
     display: grid;
+    font-size: 1.2rem;
     grid-template-columns: 1fr;
     padding: 0.5rem;
     box-shadow: var(--shadow-2);
     position: relative;
     text-decoration: none;
-    color: white;
+    /* color: white; */
 }
 
 .button {
@@ -41,3 +34,26 @@
   font-size: 1.2rem;
   margin-left: 400px;
   }
+
+  @media only screen and (max-width: 600px) {
+    .mainwrapper{
+      padding: 10px;
+    }
+  
+    .maindiv {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .country {
+      margin-bottom: 20px;
+    }
+  
+    .button {
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 20px;
+      font-size: 1rem;
+    }
+  }
+  
