--- a/src/styles/Datailspage.module.css
+++ b/src/styles/Datailspage.module.css
@@ -1,59 +1,16 @@
-.mainwrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-    padding: 20px;
+.backIcon  {
+  list-style: none;
+  position: relative;
+  top: 45px;
+  /* width: 20px; */
 }
 
-.maindiv {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-}
-
-.country {
-    display: grid;
-    font-size: 1.2rem;
-    grid-template-columns: 1fr;
-    padding: 0.5rem;
-    box-shadow: var(--shadow-2);
-    position: relative;
-    text-decoration: none;
-    /* color: white; */
-}
-
-.button {
-    text-decoration: none;
-  color: white;
-  margin-right: auto;
+.countrydetails {
   display: flex;
-  align-items: center;
   justify-content: center;
-  font-size: 1.2rem;
-  margin-left: 400px;
-  }
-
-  @media only screen and (max-width: 600px) {
-    .mainwrapper{
-      padding: 10px;
-    }
-  
-    .maindiv {
-      display: flex;
-      flex-direction: column;
-    }
-  
-    .country {
-      margin-bottom: 20px;
-    }
-  
-    .button {
-      margin-left: auto;
-      margin-right: auto;
-      margin-bottom: 20px;
-      font-size: 1rem;
-    }
-  }
-  
+  flex-direction: row-reverse;
+  background-color: grey;
+  color: white;
+  padding: 2.5rem;
+  font-family: 'Roboto Slab', serif;
+}
