--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -11,7 +11,7 @@
     font-size: 16px;
     margin-bottom: 10px;
     background-color:gray;
-    color: white;
+    color: black;
     width: 80%;
     font-family: 'Roboto Slab', serif;
   }
