--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -12,7 +12,7 @@
     margin-bottom: 10px;
     background-color:gray;
     color: black;
-    width: 80%;
+    width: 93%;
     font-family: 'Roboto Slab', serif;
   }
    .maindiv {
@@ -48,7 +48,9 @@
     height: 50px;
     margin-right: 10px;
     float: right;
-  }
+    padding-top: 2rem;
+    padding-left: 2rem;
+     }
   
   span {
     font-size: 18px;
@@ -64,7 +66,8 @@
   .link{
     margin-left: auto;
     color: white;
-    padding-top: 12px;
+    padding-top: 1rem;
     position: relative;
     bottom: 100px;
+    padding-right: 0.5rem;
   }
